--- a/index.html
+++ b/index.html
@@ -6,18 +6,50 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
     <title>PM 2.5</title>
 </head>
 <body>
     <header></header>
-    <nav class="nav">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">PM2.5</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown link
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <!-- <nav class="nav">
         <a href="index.html" class="menu-item1">Home</a>
         <a href="#" class="menu-item2">About</a>
         <a href="#" class="menu-item2">Option</a>
         <a href="#" class="menu-item2">Contact</a>
         <a href="#" class="menu-item3">...</a>
-    </nav>
+    </nav> -->
     <div class="main-box">
         <div class="box">
             <div class="main-img">
@@ -37,7 +69,7 @@
         </div>
         <div class="box">
             <div>
-                <iframe src="https://media.istockphoto.com/id/1199139118/th/%E0%B8%A7%E0%B8%B4%E0%B8%94%E0%B8%B5%E0%B9%82%E0%B8%AD/%E0%B8%A1%E0%B8%A5%E0%B8%9E%E0%B8%B4%E0%B8%A9%E0%B8%97%E0%B8%B2%E0%B8%87%E0%B8%AD%E0%B8%B2%E0%B8%81%E0%B8%B2%E0%B8%A8%E0%B8%A5%E0%B8%B0%E0%B8%AD%E0%B8%AD%E0%B8%87-pm2-5-%E0%B9%83%E0%B8%99%E0%B8%81%E0%B8%A3%E0%B8%B8%E0%B8%87%E0%B9%80%E0%B8%97%E0%B8%9E%E0%B8%AF-%E0%B8%9B%E0%B8%A3%E0%B8%B0%E0%B9%80%E0%B8%97%E0%B8%A8%E0%B9%84%E0%B8%97%E0%B8%A2.mp4?s=mp4-640x640-is&k=20&c=F48ELQ63JL38iIozBr4zkEPY5ql2Lq4kD9dgpulbY1U=" width="640" height="360" frameborder="0" allowfullscreen class="video"></iframe>
+                <iframe src="https://media.istockphoto.com/id/1199139118/th/%E0%B8%A7%E0%B8%B4%E0%B8%94%E0%B8%B5%E0%B9%82%E0%B8%AD/%E0%B8%A1%E0%B8%A5%E0%B8%9E%E0%B8%B4%E0%B8%A9%E0%B8%97%E0%B8%B2%E0%B8%87%E0%B8%AD%E0%B8%B2%E0%B8%81%E0%B8%B2%E0%B8%A8%E0%B8%A5%E0%B8%B0%E0%B8%AD%E0%B8%AD%E0%B8%87-pm2-5-%E0%B9%83%E0%B8%99%E0%B8%81%E0%B8%A3%E0%B8%B8%E0%B8%87%E0%B9%80%E0%B8%97%E0%B8%9E%E0%B8%AF-%E0%B8%9B%E0%B8%A3%E0%B8%B0%E0%B9%80%E0%B8%97%E0%B8%A8%E0%B9%84%E0%B8%97%E0%B8%A2.mp4?s=mp4-640x640-is&k=20&c=F48ELQ63JL38iIozBr4zkEPY5ql2Lq4kD9dgpulbY1U=" width="560" height="315" frameborder="0" allowfullscreen class="video"></iframe>
                 <h2 class="topic">ความสำคัญของ PM 2.5</h2>
                 <p class="text">ปกติในทางเดินหายใจของเรามีขนพัดโบก (respiratory cilia) และมีการหลั่งน้ำมูก เสมหะ เพื่อดักจับไม่ให้สิ่งแปลกปลอมเข้าสู่ทางเดินหายใจ แต่ฝุ่นขนาดเล็กกว่า 2.5 ไมโครเมตรจะสามารถเล็ดรอดเข้าไปได้ถึงหลอดลมฝอยขนาดเล็ก (bronchiole) และหากมีขนาดเล็กกว่า 1 ไมโครเมตร ก็จะสามารถซึมเข้าสู่กระแสเลือดได้ดังนั้นหากสภาพอากาศมีค่า PM 2.5 เกินมาตรฐาน คนกลุ่มแรกที่ได้รับผลกระทบอย่างมากก็คือเด็กเล็ก ผู้สูงอายุ ผู้ที่มีโรคทางเดินหายใจเรื้อรังโรคปอด และโรคหัวใจ เนื่องจากกระบวนการป้องกันของร่างกายที่อ่อนแอกว่าคนที่มีสุขภาพแข็งแรง ส่วนในคนที่มีสุขภาพแข็งแรงนั้น จากการศึกษาพบว่าหากสัมผัสกับอากาศที่มี PM 2.5 เกินมาตรฐานในระยะเวลานานมีความสัมพันธ์กับการเพิ่มโอกาสในการเสียชีวิตด้วยโรคปอดและโรคหัวใจ (cardiopulmonary mortality) และเพิ่มความเสี่ยงต่อการเป็นมะเร็งปอดด้วย</p>
             </div>
